--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1802,107 +1802,107 @@ stories:
   domain: http://www.moabtimes.com/
   link: https://moabtimes.com/2019/12/27/debate-team-hosts-red-rock-classic-with-star-wars-theme/
 images:
-- name: copper-circuit-face-eyes-shut-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-face-eyes-shut-statue.jpg
-- name: oldhousecars-house-old-cars-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
-- name: fence-mexico-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-creativity.jpg
-- name: fence-mexico.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico.jpg
-- name: miamibeach-miamibeach-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-really-hot.jpg
-- name: stalin-time-path-in-woods-green-lush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-path-in-woods-green-lush.jpg
-- name: curtain-curtain-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
-- name: blossombar-crafty-painting-file-00-00-50-28.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-28.jpg
-- name: lincoln-memorial-lincolnmemorial-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sand-paper.jpg
-- name: castle-wall-DSC-0067-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-gan-vogh.JPG
-- name: nazi-invasion-surveillance-over-the-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-over-the-city.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-pablo-blue.png
-- name: downtheline-downtheline-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-bright-sand.jpg
-- name: yosemite-yosemite-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gan-vogh.jpg
-- name: nyc-flag-api-conversations-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-- name: razorwire-DSC-0080-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-hot-spicy.jpg
-- name: bf-skinner-dinosaur-walking-desert.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dinosaur-walking-desert.jpg
-- name: old-door-lock-old-door-lock-2-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-matrix.jpg
-- name: border-fence-border-fence-on-hill-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-constitution.jpg
-- name: sand-hand-sand-hand-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-brush.jpg
-- name: docks-docks-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-purple-storm.jpg
-- name: gypsymosaic-gypsy-eyes-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-smoking-cigarette.jpg
-- name: server-cloud-server-racks-clouds-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-emily-carr.jpg
-- name: rockingchair-rockingchair-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-dali.jpg
-- name: oldhouse-oldhouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-color.jpg
-- name: eduardo-eduardo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-really-hot.jpg
-- name: eduardo-eduardo-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-rain.jpg
-- name: oldhouse-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-electricity.jpg
+- name: oldhotel-oldhotel-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
+- name: hollywood-building-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-clean-view.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
+- name: adam-smith-adam-smith-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purple-storm.jpg
+- name: bf-skinner-working-waterfront-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-waterfront-2.jpg
+- name: adam-smith-adam-smith-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dry-skin.jpg
+- name: oldhouse-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-really-hot.jpg
+- name: adam-smith-adam-smith-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-rainbow-festival.jpg
+- name: berlinwall2-berlinwall-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dali-three.jpg
+- name: bf-skinner-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-coming-in-on-train.jpg
+- name: miamibeach-miamibeach-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-green-zuma.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-rain.jpg
+- name: stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
+- name: stalin-time-castle-window_35928999923_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-castle-window_35928999923_o.jpg
+- name: curtain-curtain-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-deep-connections.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+- name: paris-paris-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-green-zuma.jpg
+- name: death-valley-death-valley-national-park-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-pablo-blue.jpg
+- name: adam-smith-adam-smith-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-clean-view.jpg
+- name: razorcliff-razorcliff-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sand-paper.jpg
+- name: border-crossing-bordercrossing-bright-sand.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-bright-sand.png
+- name: hollywood-building-hollywood-building-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-neo-instinct.jpg
+- name: christianity-christianity-under-construction-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-green-zuma.jpg
+- name: rain-princess-cargo-ship_36587814601_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-cargo-ship_36587814601_o.jpg
+- name: server-cloud-server-racks-door-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-plentiful.jpg
 - name: oldtrain-oldtrain-dark-rain.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dark-rain.jpg
-- name: rain-princess-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-building-trees-sky.jpg
-- name: stories-white-man-burning-down.jpg-large
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-white-man-burning-down.jpg-large
-- name: power-lines-power-lines-empty-space-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-asteroids.jpg
-- name: berlinwall-DSC-0084-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dry-skin.jpg
-- name: bluelake-neo-instinct-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-01-17-38.jpg
-- name: christianity-christianity-under-construction-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sunday.jpg
-- name: bf-skinner-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colored-circuits.jpg
-- name: oldhotel-oldhotel-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-marcel-duchamp.jpg
-- name: udnie-IMG_8312.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8312.jpg
-- name: crow-crow-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-umberto-bocc.jpg
-- name: braceros-domingo-ulloa-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-frosty-downtown-lights.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-far-away.jpg
-- name: oldcabin-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-diego-rivera1.jpg
-- name: oldhouse-granaryfield-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
-- name: docks-docks-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-marcel-duchamp.jpg
-- name: blossombar-sunday-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-00-00.jpg
-- name: server-cloud-server-racks-clouds-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-free-woman.jpg
-- name: aws-s3-blossombar-blossombar-still-600.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still-600.png
-- name: bf-skinner-construction-zone-claw.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-construction-zone-claw.jpg
+- name: downtown-trucksilo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-bright-sand.jpg
+- name: fence-fence-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-really-hot.jpg
+- name: containership-containership-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-space-pizza.jpg
+- name: bf-skinner-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-coming-up-tracks.jpg
+- name: stalin-time-dragon-desert-looking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dragon-desert-looking.jpg
+- name: docks-docks-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-electricity.jpg
+- name: hollywood-building-hollywood-building-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
+- name: server-cloud-server-racks-door-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-clean-view.jpg
+- name: nazi-invasion-surveillance-3-camers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-3-camers.jpg
+- name: subway-subway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
+- name: aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-77-33-800-500-0-max-0--5--1-square.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
+- name: curtain-curtain-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-soul.jpg
+- name: white-house-whitehouse-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-wols.jpg
+- name: copper-circuit-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-city-buildings.jpg
+- name: downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-cinnamon-rolls.JPG
+- name: status-berlin-status-berlin-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
+- name: docks-docks-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
+- name: cargo-ship-cargo-ship-on-sea-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-constitution.jpg
+- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
+- name: san-francisco-street-view-san-francisco-street-view-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-far-away.jpg
+- name: braceros-domingo-ulloa-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-building-barcelona-waterfront.jpg
+- name: old-door-lock-old-door-lock-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crafty-painting.jpg
+- name: meadowbutterfly-meadow-butterfly-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-satan-red.jpg
+- name: white-house-lawn-white-house-window-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-aqua.jpg
 ---
 Focus On Healthy Habits And Realistic Goals To Lose Weight In The New Year.&nbsp;Coping With The Challenges Of Mental Illness During The Holidays.&nbsp;Union Names Seniors Of The Month For November.&nbsp;Harrell Reflects On Time As Circuit Clerk.&nbsp;Packers Know They Won't Go Far In Playoffs Without Better Offensive Production.&nbsp;Tracy Area United Fund Hits Goal.&nbsp;Alice Louise McClaflin Parris.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;
